--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -85,5 +85,21 @@
 			<artifactId>bootsfaces</artifactId>
 			<version>1.5.0</version>
 		</dependency>
+		<!-- The bean validation API is provided by the JavaEE container only
+			 during runtime, but not during tests. Note: We are using JavaEE 7
+			 with bean validation 1.1, thus the ancient version. -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.4.3.Final</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- Required by org.hibernate.hibernate-validator -->
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.el</artifactId>
+			<version>3.0.1-b12</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
