--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -67,6 +67,13 @@
 		</plugins>
 	</build>
 
+	<repositories>
+		<repository>
+			<id>primefaces themes</id>
+			<url>https://repository.primefaces.org/</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -84,6 +91,16 @@
 			<groupId>net.bootsfaces</groupId>
 			<artifactId>bootsfaces</artifactId>
 			<version>1.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.primefaces.themes</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>1.0.10</version>
 		</dependency>
 		<!-- The bean validation API is provided by the JavaEE container only
 			 during runtime, but not during tests. Note: We are using JavaEE 7
