--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -102,6 +102,11 @@
 			<artifactId>bootstrap</artifactId>
 			<version>1.0.10</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
+		</dependency>
 		<!-- The bean validation API is provided by the JavaEE container only
 			 during runtime, but not during tests. Note: We are using JavaEE 7
 			 with bean validation 1.1, thus the ancient version. -->
