* download of the result sequence as FASTA file * replace the example protein library with some results from EBI's FASTA search; the reason for this change is that the FASTA program decided to cut off the first part of the sequence id for these very special ids, thus making it impossible to match the subject sequence name and description with the entry in the input fasta file * various UI beautifications

--- a/ui/src/main/webapp/WEB-INF/web.xml
+++ b/ui/src/main/webapp/WEB-INF/web.xml
@@ -32,4 +32,8 @@
 		<param-name>primefaces.THEME</param-name>
 		<param-value>bootstrap</param-value>
 	</context-param>
+	<mime-mapping>
+        <extension>fasta</extension>
+        <mime-type>text/plain</mime-type>
+    </mime-mapping>
 </web-app>
