--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -76,16 +76,15 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.2</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-web-api</artifactId>
 			<version>7.0</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.omnifaces</groupId>
+			<artifactId>omnifaces</artifactId>
+			<version>2.7.11</version>
 		</dependency>
 		<dependency>
 			<groupId>net.bootsfaces</groupId>
@@ -106,6 +105,19 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.12.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.biojava</groupId>
+			<artifactId>biojava-protein-disorder</artifactId>
+			<version>5.4.0</version>
+		</dependency>
+
+		<!-- dependencies for testing -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
 		</dependency>
 		<!-- The bean validation API is provided by the JavaEE container only
 			 during runtime, but not during tests. Note: We are using JavaEE 7
