--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -106,6 +106,7 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.12.0</version>
 		</dependency>
+		<!-- FASTA file reader -->
 		<dependency>
 			<groupId>org.biojava</groupId>
 			<artifactId>biojava-protein-disorder</artifactId>
