--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -67,12 +67,12 @@
 		</plugins>
 	</build>
 
-	<repositories>
+	<!--<repositories>
 		<repository>
 			<id>primefaces themes</id>
 			<url>https://repository.primefaces.org/</url>
 		</repository>
-	</repositories>
+	</repositories>-->
 
 	<dependencies>
 		<dependency>
@@ -91,7 +91,7 @@
 			<artifactId>bootsfaces</artifactId>
 			<version>1.5.0</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
 			<version>6.2</version>
@@ -100,7 +100,7 @@
 			<groupId>org.primefaces.themes</groupId>
 			<artifactId>bootstrap</artifactId>
 			<version>1.0.10</version>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
